--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@react-three/fiber": "^8.7.2",
     "babel-plugin-glsl": "^1.0.0",
     "glsl-random": "^0.0.5",
+    "ky": "^0.31.4",
     "next": "^12.3.0",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "three": "^0.144.0",
     "three-stdlib": "^2.15.0",
     "zustand": "^4.1.1"
