--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
+    "react-swipeable": "^7.0.0",
     "three": "^0.144.0",
     "three-stdlib": "^2.15.0",
     "zustand": "^4.1.1"
