--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-swipeable": "^7.0.0",
+    "styled-components": "^5.3.6",
     "three": "^0.144.0",
     "three-stdlib": "^2.15.0",
     "zustand": "^4.1.1"
@@ -41,17 +42,15 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.0",
     "autoprefixer": "^10.4.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.23.0",
     "eslint-config-next": "^12.3.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-tailwind": "^0.2.1",
     "file-loader": "^6.2.0",
     "glslify": "^7.1.1",
     "glslify-loader": "^2.0.0",
-    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "raw-loader": "^4.0.2",
-    "tailwindcss": "^3.1.6",
     "url-loader": "^4.1.1"
   }
 }
