--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^12.3.0",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-swipeable": "^7.0.0",
