--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
+    "@tanstack/react-query": "^4.20.9",
+    "@tanstack/react-query-devtools": "^4.20.9",
     "babel-plugin-glsl": "^1.0.0",
     "glsl-random": "^0.0.5",
     "gsap": "^3.11.3",
@@ -32,7 +34,6 @@
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2",
     "react-swipeable": "^7.0.0",
     "styled-components": "^5.3.6",
     "three": "^0.146.0",
