--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
     "react-swipeable": "^7.0.0",
     "styled-components": "^5.3.6",
     "three": "^0.146.0",
